--- a/src/Components/Header/styles.css
+++ b/src/Components/Header/styles.css
@@ -1,6 +1,6 @@
 .header-wrapper {
   display: flex;
-  padding: 7.8rem 6.125rem 0 4.15rem;
+  padding: 4rem 6.125rem 0 4.15rem;
   flex-direction: row;
 }
 
@@ -8,8 +8,8 @@
   text-transform: capitalize;
   display: flex;
   flex-direction: column;
-  width: 28rem;
-  margin-left: 2rem;
+  width: 30rem;
+  margin-left: 1rem;
 }
 
 .grey-text {
@@ -42,4 +42,39 @@
   display: flex;
   flex-direction: column;
   margin-left: 4rem;
+}
+
+@media screen and (max-width: 800px) {
+  .header-wrapper {
+    padding: 1rem 1rem 0 1rem;
+  }
+
+  .weather-info {
+    width: 10rem;
+    margin-left: 1rem;
+  }
+
+  .grey-text > span {
+    font-size: 1rem;
+  }
+
+  .grey-text {
+    font-size: 1rem;
+  }
+
+  .date-wrapper {
+    margin-left: 1rem;
+  }
+
+  .white-text {
+    font-size: 3rem;
+  }
+
+  .data-wrapper {
+    flex-direction: column;
+  }
+
+  .date-text {
+    font-size: 2rem;
+  }
 }
